list vie has been changed to recycler view with cardview as each row item

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFEECF"
 
     tools:context="com.example.listview.MainActivity" >
 
-    <ListView
-        android:id="@+id/listView1"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/title">
-
-    </ListView>
+        android:layout_below="@+id/title"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,6 +29,8 @@
         android:layout_alignParentEnd="true"
         android:gravity="center"
         android:textStyle="bold"
-        android:textSize="40dp" />
+        android:textSize="40dp"
+        android:elevation="20dp"
+        />
 
 </RelativeLayout>
