--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFEECF"
+    android:background="#404040"
 
     tools:context="com.example.listview.MainActivity" >
+
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar"></include>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:text="TECHCARDS"
+        android:id="@+id/title"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:elevation="20dp"
+        android:textColor="#8EC34C"
+        android:layout_below="@+id/app_bar" />
+
 
 
     <android.support.v7.widget.RecyclerView
@@ -17,20 +39,5 @@
         android:layout_below="@+id/title"
         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:text="TECHCARDS"
-        android:id="@+id/title"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="40dp"
-        android:elevation="20dp"
-        />
 
 </RelativeLayout>
