--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -5,12 +5,12 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    card_view:cardCornerRadius="16dp"
-    android:background="#ff2d2f3b"
+    card_view:cardCornerRadius="10dp"
     android:layout_margin="4dp"
     card_view:cardElevation="6dp"
     card_view:cardUseCompatPadding="true"
-    card_view:cardBackgroundColor="#114B5F">
+    card_view:cardBackgroundColor="#8EC34C"
+    >
 
 
     <RelativeLayout
@@ -32,6 +32,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
+
             android:textColor="#ffffffff"
             android:gravity="center"
             android:textSize="20dp"
@@ -49,8 +50,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
+            android:textColor="#404040"
 
-            android:textColor="#ffffffff" />
+             />
 
         <Button
             android:layout_width="wrap_content"
@@ -61,7 +63,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+          />
     </RelativeLayout>
 
 
