--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,27 @@
 <resources>
-
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="AppThemeBase">
         <!-- Customize your theme here. -->
-    </style>
+    <!-- Customize your theme here. -->
+</style>
+<style name="AppThemeBase" parent="Theme.AppCompat.Light.NoActionBar">
+<item name="colorPrimary">@color/primaryColor</item>
+<item name="colorPrimaryDark">@color/primaryColorDark</item>
+<item name="colorAccent">@color/accentColor</item>
 
+
+</style>
+<style name="CustomToolBar" parent="ThemeOverlay.AppCompat.Dark">
+<item name="android:background">@color/primaryColor</item>
+<item name="android:textColorPrimary">@color/accentColor</item>
+<item name="android:textColorSecondary">@color/accentColor</item>
+
+
+</style>
+<style name="CustomPopUp" parent="ThemeOverlay.AppCompat.Dark">
+<item name="android:background">@color/accentColor</item>
+<item name = "android:textColor">#FFF5B2</item>
+
+
+</style>
 </resources>
